[[changelog-2.0]]
=== 2.0

* Removed query count logging support using spring `HandlerInterceptor`
  - net.ttddyy.dsproxy.support.AbstractQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.QueryCounterClearHandlerInterceptor
  - net.ttddyy.dsproxy.support.JULQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SLF4JQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.SystemOutQueryCountLoggingHandlerInterceptor
  - net.ttddyy.dsproxy.support.CommonsQueryCountLoggingHandlerInterceptor

* Removed spring related classes
  - net.ttddyy.dsproxy.support.BeanNameProxyDataSource
  - net.ttddyy.dsproxy.support.DataSourceProxyNativeJdbcExtractor

* `ProxyDataSourceListener`
  - `MethodExecutionListener` and `QueryExecutionListener` are combined to `ProxyDataSourceListener`
  - `ChainListener` and `CompositeMethodListener` are combined to `CompositeProxyDataSourceListener`

  - `ProxyConfig#getMethodListener` and `ProxyConfig#getQueryListener` are changed to `ProxyConfig#getListener`

  Removed:
  - net.ttddyy.dsproxy.listener.NoOpQueryExecutionListener
  - net.ttddyy.dsproxy.listener.NoOpMethodExecutionListener
  - net.ttddyy.dsproxy.listener.ChainListener
  - net.ttddyy.dsproxy.listener.CompositeMethodListener

  TODO:
  - Update documentation for `ChainListener`


